Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.10***

***	Add vhier --top-module option, bug49.  [John Busco]

***	Add vpassert $ucover_bits_clk. [Mahesh Kumashikar, et al]

* Verilog::Language 3.100 2009/1/2

**	Vppp is now renamed vppreproc; vpm is renamed vpassert.
	This fixes naming conflicts with other packages.  [Chitlesh Goorah]
	Note this breaks backward compatibility and any scripts that call
	these programs will need updating.  Alternatively, add a symlink in
	your bin directory from the old name.

***	Fix missing module dependencies and Bison warning.  [Chitlesh Goorah]

* Verilog::Language 3.045 2008/12/19

***     Add vpm --noline option. [Vasu Arasanipalai]

***     Add vpm --realintent option. [Vasu Arasanipalai]

***	Fix vpm making long lines that upset Cadence's NC-Verilog. [Soon Koh]

****	Fix Makefile issues with ActivePerl.  [Jose Ochoa]

* Verilog::Language 3.044 2008/11/10

***	Support SystemVerilog unique and priority case, bug33. [by Nicky Ayoub]

***	Support SystemVerilog timeunit and timeprecision, bug34. [by Nicky Ayoub]

***	Support SystemVerilog package items, bug39. [by Nick Ayoub]

****	Expand environment variables in Verilog::Getopt.  [Lawrence Butcher]

****	Fix Verilog::EditModules when modules wrapped in ifdef.  [Mat Zeno]

* Verilog::Language 3.043 2008/09/28

***	Ignore Verilog-XL defines (suppress_faults, etc).  [Nicky Ayoub]

****	Fix cpan-testers mis-reporting FAIL when no flex installed.

****	Fix Perl Critic error when not installed, rt39654. [Andreas Koening]

* Verilog::Language 3.042 2008/09/19

***	Add Netlist net, port and module ->delete methods. [Daniel Schoch]

***	Add Netlist modules_sorted_level and ->level method. [Daniel Schoch]

***	Add vpm $uerror_clk and $uwarn_clk assertions.

***	Add vpm $ucover_clk coverage expansions.
